--- a/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMUControl.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMUControl.xaml
@@ -34,7 +34,7 @@
                         </BeginStoryboard>
                     </EventTrigger>
                 </Button.Triggers>
-                <TextBlock Text="&#xE72C;" FontFamily="Segoe MDL2 Assets" Foreground="{DynamicResource GlobalTextBrush}" FontWeight="Bold"  FontSize="12" ToolTip="刷新">
+                <TextBlock Text="&#xE72C;" FontFamily="Segoe MDL2 Assets" Foreground="{DynamicResource GlobalTextBrush}" FontWeight="Bold"  FontSize="12" ToolTip="{x:Static properties:Resources.Refresh}">
                     <TextBlock.RenderTransform>
                         <RotateTransform x:Name="rotateTransform1" CenterX="6" CenterY="6"/>
                     </TextBlock.RenderTransform>
@@ -43,9 +43,7 @@
 
             <Grid>
                 <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}"  Content="{Binding Config.Name}"  FontSize="15"  IsChecked="{Binding IsDisplayOpen}" />
-                <Grid  Height="18"   HorizontalAlignment="Left" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Visibility="{Binding ElementName=ToggleButton0,Path=IsChecked,Converter={StaticResource bool2VisibilityConverter}}" Background="{DynamicResource GlobalBackground}" Margin="4,0,0,0">
-                    <Image Source="{Binding Icon}"/>
-                </Grid>
+                <Grid  Height="18"   HorizontalAlignment="Left" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Visibility="{Binding ElementName=ToggleButton0,Path=IsChecked,Converter={StaticResource bool2VisibilityConverter}}" Background="{DynamicResource GlobalBackground}" Margin="4,0,0,0"/>
             </Grid>
         </DockPanel>
         <Border  x:Name="DisPlayBorder" Style="{DynamicResource BorderModuleArea}" Visibility="{Binding IsDisplayOpen,Converter={StaticResource bool2VisibilityConverter}}" >
@@ -61,26 +59,24 @@
                     </DockPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,3" >
-                        <RadioButton Content="{x:Static properties:Resources.V}" IsChecked="{Binding Config.IsSourceV}" />
+                        <RadioButton Content="{x:Static properties:Resources.V}" IsChecked="{Binding Config.IsSourceV}"  Margin="0,0,5,0"  />
                         <RadioButton Content="{x:Static properties:Resources.I}" IsChecked="{Binding Config.IsSourceV,Converter={StaticResource inverseBooleanConverter}}"/>
                     </StackPanel>
 
                     <StackPanel  Margin="0,0,0,3">
-                        <UniformGrid Columns="2"  Margin="0,0,0,3">
-                            <DockPanel >
-                                <TextBlock Text="{x:Static properties:Resources.SourceValue}" Margin="0,0,5,0" />
-                                <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter}}" Text="V"/>
-                                <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter1}}" Text="mA"/>
-                                <TextBox Text="{Binding Config.MeasureVal}" BorderThickness="0,0,0,1" />
-                            </DockPanel>
-                            <DockPanel >
-                                <TextBlock Text="{x:Static properties:Resources.LimitValue}" Margin="0,0,5,0" />
-                                <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter1}}" Text="V"/>
-                                <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter}}" Text="mA"/>
-                                <TextBox Text="{Binding Config.LmtVal}" BorderThickness="0,0,0,1"/>
-                            </DockPanel>
-                        </UniformGrid>
 
+                        <DockPanel  Margin="0,0,0,3" >
+                            <TextBlock Text="{x:Static properties:Resources.SourceValue}" Margin="0,0,5,0" />
+                            <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter}}" Text="V"/>
+                            <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter1}}" Text="mA"/>
+                            <TextBox Text="{Binding Config.MeasureVal}" BorderThickness="0,0,0,1" />
+                        </DockPanel>
+                        <DockPanel  Margin="0,0,0,3" >
+                            <TextBlock Text="{x:Static properties:Resources.LimitValue}" Margin="0,0,5,0" />
+                            <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter1}}" Text="V"/>
+                            <TextBlock DockPanel.Dock="Right"  Visibility="{Binding Config.IsSourceV,Converter={StaticResource bool2VisibilityConverter}}" Text="mA"/>
+                            <TextBox Text="{Binding Config.LmtVal}" BorderThickness="0,0,0,1"/>
+                        </DockPanel>
 
                         <UniformGrid  Columns="3"  Margin="0,0,0,3">
                             <Button Content="{x:Static properties:Resources.Ignite}" Click="MeasureData_Click"/>
