--- a/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
@@ -88,9 +88,9 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Ready" Visibility="{Binding Config.IsReady,Converter={StaticResource bool2VisibilityConverter}}"/>
-                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="40">
-                        <Button Content="{x:Static properties:Resources.ExecutionProcess}"  x:Name="ButtonRun" Click="Button_FlowRun_Click" Padding="20,10"/>
-                        <Button Content="{x:Static properties:Resources.StopProcess}"  x:Name="ButtonStop" Visibility="Collapsed"  Click="Button_FlowStop_Click" Padding="20,10"/>
+                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="35">
+                        <Button Content="{x:Static properties:Resources.ExecutionProcess}"  x:Name="ButtonRun" FontWeight="Bold" FontSize="16" Click="Button_FlowRun_Click" />
+                        <Button Content="{x:Static properties:Resources.StopProcess}"  x:Name="ButtonStop" Background="Red" FontWeight="Bold" Visibility="Collapsed" FontSize="16" Click="Button_FlowStop_Click" />
                     </StackPanel>
                 </Grid>
 
