--- a/Engine/ColorVision.Engine/Templates/TemplateCreate.xaml
+++ b/Engine/ColorVision.Engine/Templates/TemplateCreate.xaml
@@ -13,6 +13,7 @@
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
             <Setter Property="ToolTip" Value="{ Binding Text,RelativeSource={RelativeSource Self}}"/>
         </Style>
