--- a/Engine/ColorVision.Engine/Services/Devices/FileServer/FileServerDisplayControl.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/FileServer/FileServerDisplayControl.xaml
@@ -40,10 +40,10 @@
                 </TextBlock>
             </Button>
 
-            <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}" Content="{Binding Config.Name}"  FontSize="15"  IsChecked="{Binding IsDisplayOpen}" />
+            <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}" Content="{Binding Config.Name}"  FontSize="15"  IsChecked="{Binding DisplayConfig.IsDisplayOpen}" />
         </DockPanel>
 
-        <Border x:Name="DisPlayBorder"  Style="{DynamicResource BorderModuleArea}" Visibility="{Binding IsDisplayOpen,Converter={StaticResource bool2VisibilityConverter}}" >
+        <Border x:Name="DisPlayBorder"  Style="{DynamicResource BorderModuleArea}" Visibility="{Binding DisplayConfig.IsDisplayOpen,Converter={StaticResource bool2VisibilityConverter}}" >
             <StackPanel >
                 <DockPanel Margin="2">
                     <Button Content="{x:Static properties:Resources.Refresh}" Click="Button_Click_Refresh" />
