--- a/Projects/ProjectStarKey/ConoscopeWindow.xaml
+++ b/Projects/ProjectStarKey/ConoscopeWindow.xaml
@@ -57,11 +57,6 @@
                 <!-- Observation Camera Section (VA60 only) -->
                 <GroupBox x:Name="ObservationCameraPanel" Grid.Row="1" Header="观察相机 (视频模式)" Margin="0,0,0,10">
                     <StackPanel Margin="10">
-                        <DockPanel Margin="0,0,0,10">
-                            <TextBlock Text="选择相机:" VerticalAlignment="Center" Width="80"/>
-                            <ComboBox x:Name="cbObservationCamera" 
-                                      SelectionChanged="cbObservationCamera_SelectionChanged"/>
-                        </DockPanel>
                         <Button x:Name="btnOpenObservationCamera" 
                                 Content="打开观察相机"
                                 Click="btnOpenObservationCamera_Click"
@@ -77,12 +72,28 @@
                             <ComboBox x:Name="cbMeasurementCamera" 
                                       SelectionChanged="cbMeasurementCamera_SelectionChanged"/>
                         </DockPanel>
-                        
-                        <DockPanel Margin="0,0,0,10">
-                            <TextBlock Text="校正模板:" VerticalAlignment="Center" Width="80"/>
-                            <ComboBox x:Name="cbCalibration"/>
+                        <DockPanel>
+                            <Grid Width="20" Margin="5,0" DockPanel.Dock="Right" HorizontalAlignment="Left">
+                            <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
+                                <TextBlock.RenderTransform>
+                                    <RotateTransform x:Name="rotateTransform4" CenterX="8" CenterY="8"/>
+                                </TextBlock.RenderTransform>
+                            </TextBlock>
+                            <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0"  Click="MenuItem_Template">
+                                <Button.Triggers>
+                                    <EventTrigger RoutedEvent="Button.Click">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <DoubleAnimation Storyboard.TargetName="rotateTransform4" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                </Button.Triggers>
+                            </Button>
+                        </Grid>
+                        <ComboBox x:Name="ComboxCalibrationTemplate"  SelectedIndex="{Binding CalibrationTemplateIndex}"  SelectedValuePath="Value" DisplayMemberPath="Key"/>
                         </DockPanel>
-                        
+
                         <Button x:Name="btnOpenMeasurementCamera" 
                                 Content="获取图像"
                                 Click="btnOpenMeasurementCamera_Click"
