--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam.xaml
@@ -53,7 +53,7 @@
                         </DockPanel>
                     </DockPanel>
                     <StackPanel  Orientation="Horizontal" Margin="0,2">
-                        <Button  Content="{x:Static properties:Resources.DefaultCanvas}" DockPanel.Dock="Right" Click="CreateImage_Click"  Style="{StaticResource ButtonDefault.Small}" Margin="2,0" />
+                        <Button  Content="{x:Static properties:Resources.DefaultCanvas}" DockPanel.Dock="Right" Click="CreateImage_Click"  Style="{StaticResource ButtonDefault.Small}" Margin="0" />
                         <Button x:Name="button1" Content="{x:Static properties:Resources.ImageImport}" HorizontalAlignment="Left"   Style="{StaticResource ButtonDefault.Small}"  Click="Button1_Click" Margin="2,0"/>
                         <Button x:Name="button4" Content="{x:Static properties:Resources.ImportLatestImages}" Click="Service_Click"  Style="{StaticResource ButtonDefault.Small}" Margin="2,0" />
                         <Button x:Name="button5" Content="{x:Static properties:Resources.CaptureImage}" Click="TakePhoto_Click"  Style="{StaticResource ButtonDefault.Small}" Margin="2,0" />
@@ -61,20 +61,21 @@
 
 
                     <DockPanel Margin="0,2" >
-
                         <Button DockPanel.Dock="Right" Margin="2,0" Content="{x:Static properties:Resources.Import}" Click="Button_Service_Click"/>
                         <Button DockPanel.Dock="Right" Margin="2,0"   Content="{x:Static properties:Resources.Refresh}" Click="Button_RefreshImg_Click"/>
-                        <ComboBox x:Name="ComboBoxImg"  Margin="2,0"  Style="{StaticResource ComboBox.Small}"/>
+                        <ComboBox x:Name="ComboBoxImg"   Style="{StaticResource ComboBox.Small}"/>
                     </DockPanel>
-
-                    <StackPanel  Margin="2" Orientation="Horizontal">
+                    <DockPanel Margin="0,2">
+                        <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Selected}" Command="{Binding PoiConfig.OpenPoiCIEFileCommand}" Margin="5,0,0,0"/>
+                        <TextBox Text="{Binding PoiConfig.BackgroundFilePath}" IsReadOnly="True"/>
+                    </DockPanel>
+                    <StackPanel Margin="0" Orientation="Horizontal">
                         <Button  ToolTip="{x:Static properties:Resources.SavePOI}" Click="Button_Save_Click" HorizontalAlignment="Right" Margin="0,0,5,0">
                             <Image Source="{StaticResource DrawingImageSave}" Height="20" />
                         </Button>
                         <Button x:Name="button3" ToolTip="{x:Static properties:Resources.ClearPOI}" Click="Button3_Click" HorizontalAlignment="Right">
                             <Image Source="{StaticResource DrawingImageClear}" Height="20"/>
                         </Button>
-                        <Button Content="{x:Static properties:Resources.ReRender}" Margin="5,0,0,0" ToolTip="{x:Static properties:Resources.Once}"  Click="Button_UpdateVisualLayout_Click"  DockPanel.Dock="Right" Visibility="{Binding PoiConfig.IsLayoutUpdated ,Converter={StaticResource bool2VisibilityConverter1}}" />
                     </StackPanel>
                 </StackPanel>
             </Border>
