--- a/Projects/ProjectStarkSemi/App.xaml
+++ b/Projects/ProjectStarkSemi/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ProjectStarKey.App"
+﻿<Application x:Class="ProjectStarkSemi.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ProjectStarKey"
+             xmlns:local="clr-namespace:ProjectStarkSemi"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     <Application.Resources>
         <ResourceDictionary>
