--- a/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
+++ b/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ProjectStarKey.ConoscopeWindow"
+﻿<Window x:Class="ProjectStarkSemi.ConoscopeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
-        xmlns:local="clr-namespace:ProjectStarKey"
-        xmlns:properties="clr-namespace:ProjectStarKey.Properties"
+        xmlns:local="clr-namespace:ProjectStarkSemi"
+        xmlns:properties="clr-namespace:ProjectStarkSemi.Properties"
         mc:Ignorable="d"
         Title="Conoscope" Height="720" Width="1280" Initialized="Window_Initialized">
     <Grid>
